--- a/open-bpmn.glsp-client/open-bpmn-glsp/tsconfig.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/tsconfig.json
@@ -5,8 +5,7 @@
     "outDir": "lib",
     "baseUrl": ".",
     "reactNamespace": "JSX",
-    "skipLibCheck": true,
-    "types": []
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
