--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -34,13 +34,13 @@
   },
   "peerDependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typescript": ">=4.5.5"
   },
   "devDependencies": {
     "@eclipse-glsp/config": "0.9.0",
     "lerna": "^4.0.0",
-    "rimraf": "^2.6.1",
-    "typescript": "~4.5.5"
+    "rimraf": "^2.6.1"
   },
   "workspaces": [
     "open-bpmn-glsp",
