--- a/open-bpmn.glsp-client/open-bpmn-glsp/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "@eclipse-glsp/client": "0.9.0",
+    "@open-bpmn/dummy-sub1": "0.0.7",
     "@jsonforms/core": "3.0.0-beta.0",
     "@jsonforms/react": "3.0.0-beta.0",
     "@jsonforms/vanilla-renderers": "3.0.0-beta.0",
