--- a/open-bpmn.glsp-client/open-bpmn-properties/tsconfig.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "src",
     "outDir": "lib",
     "baseUrl": ".",
+    "jsx": "react",
     "skipLibCheck": true
   },
   "include": ["src"]
